RESOLVED FIXED23091
Some webarchive http tests intermittently fail due to Connection/Keep-Alive header differences
https://bugs.webkit.org/show_bug.cgi?id=23091
Summary Some webarchive http tests intermittently fail due to Connection/Keep-Alive h...
David Kilzer (:ddkilzer)
Reported 2009-01-03 14:34:21 PST
* SUMMARY Some http/tests/webarchive tests fail intermittently with differences in Connection and Keep-Alive headers. This is probably due to CFNetwork differences between Tiger and Leopard. We should just ignore these headers by deleting them from the webarchive results.
Attachments
Patch v1 (23.84 KB, patch)
2009-01-03 17:10 PST, David Kilzer (:ddkilzer)
darin: review+
David Kilzer (:ddkilzer)
Comment 1 2009-01-03 17:10:53 PST
Created attachment 26396 [details] Patch v1
Darin Adler
Comment 2 2009-01-03 18:34:15 PST
Comment on attachment 26396 [details] Patch v1 r=me
David Kilzer (:ddkilzer)
Comment 3 2009-01-03 19:36:36 PST
$ git svn dcommit Committing to http://svn.webkit.org/repository/webkit/trunk ... M LayoutTests/ChangeLog M LayoutTests/http/tests/webarchive/test-css-url-encoding-expected.webarchive M LayoutTests/http/tests/webarchive/test-css-url-encoding-shift-jis-expected.webarchive M LayoutTests/http/tests/webarchive/test-css-url-encoding-utf-8-expected.webarchive M LayoutTests/http/tests/webarchive/test-preload-resources-expected.webarchive M WebKitTools/ChangeLog M WebKitTools/DumpRenderTree/mac/DumpRenderTree.mm Committed r39576 http://trac.webkit.org/changeset/39576
Note You need to log in before you can comment on or make changes to this bug.