        Bug 23091: Some webarchive http tests intermittently fail due to Connection/Keep-Alive header differences

<https://bugs.webkit.org/show_bug.cgi?id=23091>

        Reviewed by Darin Adler.

WebKitTools:

        * DumpRenderTree/mac/DumpRenderTree.mm:
        (normalizeHTTPResponseHeaderFields): Remove Keep-Alive and
        Connection headers from webarchive results.

LayoutTests:

        Updated test results after removing Keep-Alive and Connection
        headers from webarchive tests.

        * http/tests/webarchive/test-css-url-encoding-expected.webarchive:
        * http/tests/webarchive/test-css-url-encoding-shift-jis-expected.webarchive:
        * http/tests/webarchive/test-css-url-encoding-utf-8-expected.webarchive:
        * http/tests/webarchive/test-preload-resources-expected.webarchive:

Canonical link: https://commits.webkit.org/31775@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@39576 268f45cc-cd09-0410-ab3c-d52691b4dbfc